--- a/css/sass/partials/_layout.scss
+++ b/css/sass/partials/_layout.scss
@@ -105,6 +105,7 @@
 
         .container {
             height: 100vh;
+            min-height: 785px;
             padding: 500px auto;
 
             background-image:   $background-image;
